infra/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  namespace: qa
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
        #ingressClassName: nginx-example
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
           # name: busapp.dev.svc.cluster.local
            name: busapp
            namespace: dev
            port:
              number: 80
 
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
           # name: busapp-01.dev-space.svc.cluster.local
            name: busapp-01
            namespace: dev-space
            port:
              number: 8081
